TestSuite/errors/err0385.pas
type
  T1 = partial class a: integer; end;
  
  T1 = partial static class end;
  
begin
 
end.